Configure conditional build: API routes for local, static export for GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
       
     - name: Build
       run: npm run build
+      env:
+        GITHUB_ACTIONS: true
+        NODE_ENV: production
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
