refactor: simplify to Google Service Account only
- Remove unnecessary API routes (subscribe, subscribe-email, subscribe-fallback, subscribe-popup, subscribe-simple)
- Keep only subscribe-service-account route for secure Google Sheets integration
- Update EmailCapture component to use service-account route only
- Add debug logging for environment variables
- Update documentation for service account setup
- Add test script and environment example files
- Install dotenv package and configure next.config.js for env variables

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
     "lucide-react": "^0.294.0",
